# hecate

./: .gitignore  CMakeLists.txt  Grid.cpp  Grid.h  HecateFiles.cpp  README.md  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp
bash_hecate/: CMakeLists.txt  main.cpp
bash_hecate/scripting/: .gitignore  config.yaml  config_phase2.yaml  decompress.py  run.py  run_hecate.py  run_phase2.py
geometry/: 2Dgrid.cpp  2Dgrid.h  BBox.h  Geometry.cpp  Geometry.h  Quadtree.cpp  Quadtree.h  SATProjection.h  Triangle.cpp  Triangle.h
hec2png/: CMakeLists.txt  main.cpp
shaders/: points.vert
